# ar_wordcloud

./: .gitignore  README.md  pyproject.toml
ar_wordcloud/: __init__.py  _fonts.py  ar_wordcloud.py  stopwords  utils.py
examples/: arabic.txt  how_to.ipynb  more_fonts.ipynb  using_mask.ipynb
