[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ar_wordcloud"
author = "Aziz Alto"
author-email = "iamaziz.alto@gmail.com"
home-page = "https://github.com/iamaziz/ar_wordcloud"
requires = [
    "requests",
    "wordcloud >=1.7.0",
    "python-bidi >=0.4.2",
    "arabic_reshaper >=2.0.14"
]
requires-python=">=3.4"
description-file="README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
